--- a/app/globals.css
+++ b/app/globals.css
@@ -10,19 +10,52 @@
     }
     
     body {
+        margin: 0px;
         font-family: var(--font-family);
         font-weight: normal;
         background: var(--surface-ground);
         color: var(--text-color);
-        padding: 1rem;
         -webkit-font-smoothing: antialiased;
         -moz-osx-font-smoothing: grayscale;
     }
     
     .card {
         background: var(--surface-card);
-        padding: 2rem;
         border-radius: 10px;
         margin-bottom: 1rem;
     }
+
+    .my-custom-button {
+        background: #3b82f6;
+        border: 2px solid #f4f8ff;    
+    }
+
+    .my-custom-button:active {
+        background-color: #306ccb;
+        box-shadow: 2 4px 4px #666;
+        transform: scale(0.95);
+
+      }
+
+    .p-paginator {
+        background: #ffffff;
+        color: #6b7280;
+        border: solid #f3f4f6;
+        border-width: 0;
+        padding: 0rem 1rem;
+        border-radius: 6px;
+    }
+
+    .p-card .p-card-content {
+        padding: 0rem 0;
+    }
+
+    .p-card .p-card-body {
+        padding: 1rem;
+    }
+    
+
+
+
+    /*     !!NO ONE TOUCH MY CSS!!!!!!!!!!!!!!!!!!!!!     */
 }
