--- a/app/globals.css
+++ b/app/globals.css
@@ -1,28 +1,97 @@
-@import 'primereact/resources/themes/lara-light-blue/theme.css';
+@import 'primereact/resources/themes/lara-light-blue/theme.css';  /* Choose your theme */
+@import 'primereact/resources/primereact.min.css';
+/* @import 'primeicons/primeicons.css'; */
+
 
 @tailwind components;
 @tailwind utilities;
 
-@layer reset,primereact;
+@layer reset, primereact;
 @layer reset {
-    html {
-        font-size: 14px;
-    }
-    
-    body {
-        font-family: var(--font-family);
-        font-weight: normal;
-        background: var(--surface-ground);
-        color: var(--text-color);
-        padding: 1rem;
-        -webkit-font-smoothing: antialiased;
-        -moz-osx-font-smoothing: grayscale;
-    }
-    
-    .card {
-        background: var(--surface-card);
-        padding: 2rem;
-        border-radius: 10px;
-        margin-bottom: 1rem;
-    }
+  html {
+    font-size: 14px;
+}
+
+body {
+  margin: 0px;
+  font-family: var(--font-family);
+  font-weight: normal;
+  background: var(--surface-ground);
+  color: var(--text-color);
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
+.card {
+    background: var(--surface-card);
+    padding: 2rem;
+    border-radius: 10px;
+    margin-bottom: 1rem;
+}
+
+.my-custom-button {
+  background: #3b82f6;
+  border: 2px solid #f4f8ff;    
+}
+
+.my-custom-button:active {
+  background-color: #306ccb;
+  box-shadow: 2 4px 4px #666;
+  transform: scale(0.95);
+
+}
+
+.p-paginator {
+  background: #ffffff;
+  color: #6b7280;
+  border: solid #f3f4f6;
+  border-width: 0;
+  padding: 0rem 1rem;
+  border-radius: 6px;
+}
+
+.p-card .p-card-content {
+  padding: 0rem 0;
+}
+
+.p-card .p-card-body {
+  padding: 1rem;
+}
+
+.c-step {
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 50%; /* border-circle */
+  border: 1px solid var(--primary-color); /* border-primary and border-1 */
+  height: 3rem; /* h-3rem */
+  width: 3rem; /* w-3rem */
+  z-index: 1; /* z-1 */
+  cursor: pointer; /* cursor-pointer */
+}
+
+.pdframe{
+  width: 400px;
+  height: 1000px;
+}
+
+.table{
+  font-size: large;
+  width: 60%;
+}
+
+td {
+  text-align: left;
+  height: 3rem;
+}
+
+th {
+  text-align: left;
+  height: 3rem;
+
+}
+
+}
+@layer primereact {
+
 }
