--- a/app/globals.css
+++ b/app/globals.css
@@ -108,6 +108,35 @@ th {
   height: 100%;
 }
 
+.p-card .p-card-body {
+  padding: 0rem;
+}
+
+/* Apply custom scrollbar styling to elements with the custom-scrollbar class */
+.custom-scrollbar::-webkit-scrollbar {
+  width: 5px;
+}
+
+.custom-scrollbar::-webkit-scrollbar-track {
+  background-color: #d4d4d4;
+  border-radius: 0px 10px 10px 0px; /* Adds a rounded border to the track */
+}
+
+.custom-scrollbar::-webkit-scrollbar-thumb {
+  background-color: #afafaf;
+  border-radius: 10px ; /* Adds a rounded border to the thumb */
+}
+
+.custom-scrollbar::-webkit-scrollbar-thumb:hover {
+  background-color: #9c9c9c;
+}
+
+.disabled-link {
+  pointer-events: none;  /* Disable clicking */
+  cursor: not-allowed;  /* Change cursor to not-allowed when hovering */
+}
+
+
 }
 @layer primereact {
 
